--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@types/cors": "^2.8.13",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.4.1"
   }
