--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
+    "md5": "^2.3.0",
     "mongoose": "^7.4.1",
     "nodemon": "^3.0.1",
     "router": "^1.3.8",
