--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.5",
     "@types/sqlite3": "^3.1.8",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "sqlite": "^5.0.1",
     "sqlite3": "^5.1.6",
     "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13"
   }
 }
