--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/SAUMYXA/backendDevAppZigyprints#readme",
   "dependencies": {
+    "@types/sqlite3": "^3.1.8",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
+    "sqlite3": "^5.1.6",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
