--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "./backend/index.js",  
+        "src": "./Backend/index.js",  
         "use": "@vercel/node"
       }
     ],
     "rewrites": [
       {
         "source": "/(.*)",
-        "destination": "/backend/index.js"
+        "destination": "/Backend/index.js"
       }
     ]
 }
