--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongodb": "^5.8.1",
     "moongose": "^1.0.0",
     "nodemon": "^3.0.1"
   }
