--- a/package.json
+++ b/package.json
@@ -1,9 +1,24 @@
 {
+  "name": "backenddevelopmentapplications-rishabh",
+  "version": "1.0.0",
+  "description": "Assignment: Simple Backend API Development with TypeScript",
+  "main": "index.js",
+  "scripts": {
+    "start": "node dist/app.js",
+    "dev": "nodemon Backend/index.js"
+  }, 
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.5.6",
+    "nodemon": "^3.0.1"
+  },
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^5.8.1",
-    "moongose": "^1.0.0",
-    "nodemon": "^3.0.1"
+    "moongose": "^1.0.0"
   }
 }
