--- a/main/package.json
+++ b/main/package.json
@@ -14,8 +14,14 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.6",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1",
+    "mongoose": "^7.4.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/mongoose": "^5.11.97",
+    "concurrently": "^8.2.1",
+    "cors": "^2.8.5",
+    "nodemon": "^3.0.1"
   }
 }
