--- a/main/package.json
+++ b/main/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/index.ts"
+    "start": "nodemon ./src/app.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@typegoose/typegoose": "^11.4.1",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.6",
     "express": "^4.18.2",
@@ -19,6 +20,7 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/mongoose": "^5.11.97",
     "concurrently": "^8.2.1",
     "cors": "^2.8.5",
