--- a/main/package.json
+++ b/main/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/app.ts"
+    "start dev": "nodemon ./src/app.ts",
+    "start prod": "node ./src/app.ts"
   },
   "keywords": [],
   "author": "",
