--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,2 @@
 MONGO_URI = mongodb+srv://shahayush329:shah2002@cluster0.ig3lmhy.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET = nfrjfbebbgrle2k312
