--- a/package.json
+++ b/package.json
@@ -4,20 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node index.ts",
+    "start": "nodemon index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.17",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "sqlite": "^5.0.1",
-    "sqlite3": "^5.1.6",
-    "ts-node": "^10.9.1"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.13"
+    "sqlite3": "^5.1.6"
   }
 }
