--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "backenddevelopmentapplications",
   "version": "1.0.0",
   "description": "Assignment: Simple Backend API Development with TypeScript",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
+    "start": "tsc && node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
