--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,13 @@
   "version": 2,
   "builds": [
     {
-      "src": "*.js",
+      "src": "tsconfig.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/dist/(.*)",
+      "src": "/(.*)",
       "dest": "dist/app.js"
     }
   ]
