change in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,9 @@
   "version": 2,
   "builds": [
     {
-      "src": "tsconfig.js",
-      "use": "@vercel/node"
+      "src": "dist/app.js",
+      "use": "@vercel/node",
+      "config": { "includeFiles": ["dist/**"] }
     }
   ],
   "routes": [
