Generate Deployment link and connect to Mongodb atlas

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "tsc": "npx tsc",
-    "nodemon": "nodemon dist/app.js"
+    "serve": "nodemon dist/app.js"
   },
   "keywords": [],
   "author": "",
