--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "uuid": "^9.0.0"
   }
 }
