--- a/Client/tsconfig.json
+++ b/Client/tsconfig.json
@@ -14,6 +14,7 @@
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "sourceMap": true,
     "noEmit": true,
     "jsx": "react-jsx",
     /* Linting */
