--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/express": "^4.17.18",
     "@types/node": "^20.8.0",
+    "@types/socket.io": "^3.0.2",
     "nodemon": "^3.0.1"
   }
 }
