--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.2"
   },
   "scripts": {
@@ -12,7 +15,10 @@
   },
   "type": "module",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.4",
     "@types/express": "^4.17.18",
+    "@types/jsonwebtoken": "^9.0.3",
+    "@types/multer": "^1.4.8",
     "@types/node": "^20.8.0",
     "@types/socket.io-client": "^3.0.0",
     "dotenv": "^16.3.1",
