--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "anshu",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^2.5.0"
   },
