--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
-    "socket.io": "^2.5.0"
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
-    "nodemon": "^1.19.4"
+    "@types/express": "^4.17.18",
+    "@types/multer": "^1.4.8",
+    "@types/socket.io": "^3.0.2",
+    "@types/socket.io-client": "^3.0.0",
+    "nodemon": "^3.0.1"
   }
 }
